MISC: Compiler Warnings in alten Aufgaben